objects/Subcontractor__c.object
<CustomObject>
    <description>Sub contractors are facilities that deliver to a assembly facility</description>
    <fields>
        <fullName>Facility_Number__c</fullName>
        <formula>Facility__r.Facility_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facility Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Status__c</fullName>
        <formula>Text(Facility__r.Facility_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facility Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <description>Facility</description>
        <inlineHelpText>Facility</inlineHelpText>
        <label>Facility</label>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Subcontractores</relationshipLabel>
        <relationshipName>Subcontractores</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Green_List_Status__c</fullName>
        <formula>Facility__r.Green_List_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Green List Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subcontractor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Subcontractor</description>
        <inlineHelpText>Subcontractor</inlineHelpText>
        <label>Subcontractor</label>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Subcontractores (Subcontractor)</relationshipLabel>
        <relationshipName>Subcontractores1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Subcontractor</label>
    <nameField>
        <displayFormat>SB-{00000}</displayFormat>
        <label>Subcontractor</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subcontractores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>